[gd_scene format=3 uid="uid://dyclknruy8aqf"]

[ext_resource type="Script" uid="uid://dms3vksv6tel5" path="res://spectator.gd" id="2_8sb5x"]
[ext_resource type="PackedScene" uid="uid://xrt23kyre42" path="res://addons/godot-xr-tools2/spectator/xrt2_spectator_camera.tscn" id="2_hkn0h"]
[ext_resource type="PackedScene" uid="uid://cj2av4gb40wn4" path="res://main.tscn" id="2_p0jir"]
[ext_resource type="Texture2D" uid="uid://u6nldwj0320i" path="res://assets/main/splash.png" id="3_51pj4"]
[ext_resource type="PackedScene" uid="uid://xrt27oxtswc" path="res://addons/godot-xr-tools2/spectator/xrt2_stabilized_camera.tscn" id="5_v5hs0"]

[node name="Spectator" type="Node2D" unique_id=65284563]
script = ExtResource("2_8sb5x")

[node name="LoadingImage" type="TextureRect" parent="." unique_id=1978528374]
texture = ExtResource("3_51pj4")
expand_mode = 2
stretch_mode = 5

[node name="CameraSelectionDropdown" type="OptionButton" parent="." unique_id=236373627]
offset_left = 10.0
offset_top = 10.0
offset_right = 329.0
offset_bottom = 63.0
theme_override_font_sizes/font_size = 32
selected = 0
item_count = 2
popup/item_0/text = "Spectator Camera"
popup/item_0/id = 0
popup/item_1/text = "Stablilized Camera"
popup/item_1/id = 1

[node name="Xrt2SpectatorCamera" parent="." unique_id=717676012 instance=ExtResource("2_hkn0h")]
transform = Transform3D(-0.772577, 0.196973, -0.603594, 0.00228937, 0.951519, 0.307582, 0.634916, 0.236249, -0.735573, -0.993, 2.0438, -1.355278)

[node name="Xrt2StabilizedCamera" parent="." unique_id=787561721 instance=ExtResource("5_v5hs0")]

[node name="HMDViewport" type="SubViewport" parent="." unique_id=642626542]
msaa_3d = 1
use_debanding = true
audio_listener_enable_3d = true

[node name="Main" parent="HMDViewport" unique_id=996397910 instance=ExtResource("2_p0jir")]

[connection signal="item_selected" from="CameraSelectionDropdown" to="." method="_on_camera_selection_dropdown_item_selected"]
[connection signal="showing_loaded_scene" from="HMDViewport/Main" to="." method="_on_main_showing_loaded_scene"]
[connection signal="showing_loading_screen" from="HMDViewport/Main" to="." method="_on_main_showing_loading_screen"]
